[project]
name = "comfyui-google-genmedia-custom-nodes"
description = "A suite of experimental custom nodes that allows access to Google's 1P models like Veo, Imagen, Nano Banana, Gemini, Virtual-try-on, Lyria"
version = "6.0.0"
license = {file = "LICENSE"} 

dependencies = ["google-api-core==2.24.2", "google-cloud-aiplatform==1.111.0", "google-cloud-storage==2.19.0", "google-genai==1.46.0", "google-generativeai==0.8.5", "moviepy==2.2.1", "opencv-python-headless==4.11.0.86"]

[project.urls]
Repository = "https://github.com/GoogleCloudPlatform/comfyui-google-genmedia-custom-nodes"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/GoogleCloudPlatform/comfyui-google-genmedia-custom-nodes/wiki"
"Bug Tracker" = "https://github.com/GoogleCloudPlatform/comfyui-google-genmedia-custom-nodes/issues"

[tool.comfy]
PublisherId = "gushob21"
DisplayName = "comfyui-google-genmedia-custom-nodes"
Icon = ""
